		   alsa_pcm:playback_X)
	- changed: number of channels must be given as the first
	           parameter to -ezx; this was needed to implement
		   true multichannel support
	- changed: syntax used for JACK inputs/outputs, see 
		   ecasound(1) and ecasound user's guide for 
		   details
	- changed: ecasound JACK transport master mode now follows
		   the new pending-timebase model 
	- fixed: libecasoundc return value sync problem; return
		 value for command wasn't returned until command n+1 
		 was issued
	- fixed: -etc, -etl and -etp crashes if delay parameter 
		 was set to zero
	- fixed: -ezf didn't report the correct dcfic for the 
		 first channel
	- fixed: LADSPA param descriptions were incorrectly 
		 parsed
	- fixed: ecasound ended up in a cpu-intensive loop if 
	         the standard input suddenly disappeared in 
		 the -D output mode; this happened every now 
		 and then with ECI apps
19102002 (v2.2.0-pre3)
	- fixed: reverted to using old ALSA 0.9 hw-params API,
		 ecasound agains works with old 0.9beta and 0.9rc 
		 ALSA versions
18102002 (v2.2.0-pre2)
	- fixed: ALSA objects weren't properly registered as audio
		 object types
	- fixed: debug level was resetted to 0 after issuing
		 'int-output-mode-wellformed'
	- fixed: automake complained about multiple definition
	 	 of ecasoundc_sa
17102002 (v2.2.0-pre1)
	- edi-entries: edi-24, edi-28, edi-29, edi-30
	- note: libecasound and libkvutils interface version numbers
		will from now on track API changes instead of ABI
	        changes
	- added: edi-24; resample audio object added
	- added: edi-29; initial version of ecamonitor
	- added: edi-28; eiam-command 'int-output-mode-wellformed'
	- removed: edi-30; ecasound internal plugins no longer
		   installed separately
	- changed: ALSA support requires alsa-lib version 
		   0.9rc4 or newer
	- changed: libecasoundc versioning back to normal libtool 
		   style; interface version reverted back to 1:0:0