@@ -20,9 +20,6 @@ else
 bin_PROGRAMS = ecasound
 endif
 
-bin_SCRIPTS = ecamonitor
-EXTRA_DIST = ecamonitor
-
 ecasound_SOURCES = 	ecasound.cpp \
 			ecasound.h \
 			eca-console.h \
