@@ -49,45 +49,9 @@ ECA_LOGGER_WELLFORMED::~ECA_LOGGER_WELLFORMED(void)
  */
 void ECA_LOGGER_WELLFORMED::do_msg(ECA_LOGGER::Msg_level_t level, const string& module_name, const string& log_message)
 {
-  string rettype;
-  string::const_iterator p = log_message.begin();
-  size_t msglen = log_message.size();
-
   if (is_log_level_set(level) == true) {
-
-    /* 1. loglevel */
-    cout << kvu_numtostr(static_cast<int>(level));
-    
-    /* 2. space */
-    cout << " ";
-    
-    if (level == ECA_LOGGER::eiam_return_values) {
-      while(p != log_message.end()) {
-	msglen--;
-	if (isspace(*p) != 0) {
-	  rettype = string(log_message.begin(), p);
-	  p++; /* skip space to reach start of actual msg */
-	  break;
-	}
-	++p;
-      }
-    }
-    
-    /* 3. message size */
-    cout << kvu_numtostr(msglen);
-    
-    if (level == ECA_LOGGER::eiam_return_values) {
-      /* 4. space */
-      cout << " ";
-      
-      /* 5. return type */
-      cout << rettype;
-    }
-    
-    /* 6. contentblock */
-    cout << "\r\n";
-    cout << string(p,log_message.end()); 
-    cout << "\r\n\r\n";
+    cout << ECA_LOGGER_WELLFORMED::create_wellformed_message(level,
+							     log_message);
   }
 }
 
@@ -97,4 +61,47 @@ void ECA_LOGGER_WELLFORMED::do_flush(void)
 
 void ECA_LOGGER_WELLFORMED::do_log_level_changed(void)
 {
+}
+
+string ECA_LOGGER_WELLFORMED::create_wellformed_message(ECA_LOGGER::Msg_level_t level, const string& message)
+{
+  string result, rettype;
+  string::const_iterator p = message.begin();
+  size_t msglen = message.size();
+
+  /* 1. loglevel */
+  result += kvu_numtostr(static_cast<int>(level));
+    
+  /* 2. space */
+  result += " ";
+  
+  if (level == ECA_LOGGER::eiam_return_values) {
+    while(p != message.end()) {
+      msglen--;
+      if (isspace(*p) != 0) {
+	rettype = string(message.begin(), p);
+	p++; /* skip space to reach start of actual msg */
+	break;
+      }
+      ++p;
+    }
+  }
+  
+  /* 3. message size */
+  result += kvu_numtostr(msglen);
+  
+  if (level == ECA_LOGGER::eiam_return_values) {
+    /* 4. space */
+    result += " ";
+    
+    /* 5. return type */
+    result += rettype;
+  }
+  
+  /* 6. contentblock */
+  result += "\r\n";
+  result += string(p,message.end()); 
+  result += "\r\n\r\n";
+
+  return(result);
 }
