@@ -1,3 +1,8 @@
+2002-10-30  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* eca-control.cpp (last_value_to_string): added
+	* eca-logger-wellformed.cpp (create_wellformed_message): added
+
 2002-10-26  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* eca-chainop.h (output_samples): renamed to max_output_samples()
